# openapi/admin-users.yaml
@@ -78,6 +78,32 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
 
+    # ユーザー削除
+    delete:
+      operationId: deleteAdminUsers
+      summary: ユーザー削除
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: number
+              required: ["id"]
+      responses:
+        "200":
+          description: ユーザー削除成功
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                required: ["message"]
+
   /admin/users/{id}:
     # ユーザー情報更新
     put:
